# iTTS

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
iTTS/: MagicsAutoCompleter.py  __init__.py  __main__.py  install.py  kernel.py
